# solid-github

./: bun.lockb  components.json  package.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
src/: Api.tsx  App.css  App.tsx  Auth.ts  AuthContext.tsx  Dashboard.tsx  Store.ts  models.d.ts  tauriHelper.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: github_auth.rs  lib.rs  main.rs
src/components/: Content.tsx  Details.tsx  Header.tsx  Issues.tsx  Sidebar.tsx
src/components/ui/: dialog.tsx
